package validacionesContrasenias;

public interface Validador {
	public void validar(String password);
}
